src/scss/style.scss
@import 'bootstrap/scss/bootstrap';

:root {
  --app-width: 3840; // overwritten by JS
  --app-height: 2160; // overwritten by JS
  --svg-width: 3840;
  --svg-height: 2160;
  --svg-scale-factor: calc(var(--app-height) / var(--svg-height));
}

html,
body {
  position: absolute;
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
  overscroll-behavior: none;
  background-color: black;
}

#fixed-size-container {
  // The actual size is defined via code
  position: absolute;
  top: 0;
  left: 0;
  overflow: hidden;
}

.fill {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.hidden {
  display: none;
}

